--- a/contact.css
+++ b/contact.css
@@ -4,12 +4,30 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.container {
+    padding: 0px 20px;
+    margin: 0px;
+}
+
+nav{
+    display: flex;
+    justify-content: center;
+    padding: 0px;
+    margin: 0px;
+}
+
+nav a {
+    text-decoration: underline;
+}
+
 .li_header {
     display: flex;
     justify-content: space-around;
     list-style-type: none;
     align-items: center;
-    padding: 16px;
+    margin: 0px 0px 0px 0px;
+    padding: 16px 0px 16px 0px;
+    width: 100%;
 }
 
 a {
@@ -112,9 +130,5 @@ footer a {
 
 footer p {
     margin-top: 2px;
-}
-
-.container {
-    padding: 0px 50px;
 }
 
