--- a/index.css
+++ b/index.css
@@ -4,6 +4,22 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.container {
+    padding: 0px 20px;
+    margin: 0px;
+}
+
+nav{
+    display: flex;
+    justify-content: center;
+    padding: 0px;
+    margin: 0px;
+}
+
+nav a {
+    text-decoration: underline;
+}
+
 main {
 	display: flex;
 	justify-content: space-around;
@@ -18,13 +34,14 @@ main section {
     justify-content: space-around;
     list-style-type: none;
     align-items: center;
-    padding: 16px;
-    width: auto;
+    margin: 0px 0px 0px 0px;
+    padding: 16px 0px 16px 0px;
+    width: 100%;
 }
 
 a {
     color: white;
-    text-decoration: none;
+    text-decoration:none;
 }
 
 nav a:hover{
@@ -66,10 +83,6 @@ footer a {
 
 footer p {
     margin-top: 2px;
-}
-
-.container {
-    padding: 0px 50px;
 }
 
 @media only screen and (max-width: 899px) {
